# ChangeLog for app-benchmarks/stressapptest
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  20 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +stressapptest-1.0.0.ebuild, +metadata.xml:
  initial commit for testing
