@@ -1,4 +1,6 @@
 DIST stressapptest-1.0.0_autoconf.tar.gz 188825 RMD160 bb6ca99a68835eea936abcfd7ab15df2a741eb37 SHA1 1e595c2ab6699233a1606d62f6981e66b6504e2f SHA256 71f58a1ee7629ddbf10866467967ca230fedc7c695ce4d40076bef42ef8d95b6
+DIST stressapptest-1.0.2_autoconf.tar.gz 191571 RMD160 e59fdd51c4c28f346cf96a383fbef1bfbdfe48ca SHA1 17f6d00293b0eb0f677ae3db1580aa3400c1e7e2 SHA256 73387ac4bfb299a4222ba1610b259bf637615503898944f2ab7a0091f140bfc0
 EBUILD stressapptest-1.0.0.ebuild 532 RMD160 9a3678f1fc538cfa84ae275aef142709da236641 SHA1 a04cfb7e70f3121c08d3c80a99836239e6a22b1a SHA256 b9cc6029963cd7289758ec89d2b183e2520c8c9632a44cd00a51cbd7230d843c
-MISC ChangeLog 258 RMD160 25c3256352902b539f9d85097377699408866ef4 SHA1 198bcb288ce9c55623af60274adefb54cc9045a5 SHA256 152d938163140d12b25455aeafeb536ec746c76f363eb19a000667bd7ce3b26e
+EBUILD stressapptest-1.0.2.ebuild 547 RMD160 06496c75a9b4ee0b6feca1e4ecce0f3d5f046834 SHA1 b710a6618b4c141dd9603e9578667768fee57c58 SHA256 126682ef568481322fe5e479a8f7a0bc70b263d629da703c2459aef5b32fc042
+MISC ChangeLog 434 RMD160 1f07c6935c6395b18e52ac1e150e80a5ca76764f SHA1 9462b7502a94ebd34ee9b1025e69591953d75b63 SHA256 6c7f3bf3b6f45058bf20513f6578ca590cefcda5e5adc8ce5450904fe7c392de
 MISC metadata.xml 365 RMD160 691018c5ce6e2eb8d9a29c138e5a5fbc0668f323 SHA1 67a86a569a207cf63a2069a93390043436f9f4ff SHA256 d3292c889cc8b28ff8bb1634fcc64079ace9f3dd971358b659a5cd5514af2977
