@@ -1,8 +1,16 @@
 # ChangeLog for app-benchmarks/stressapptest
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  14 Mar 2010; A. Vinogradov <spamslepnoga@inbox.ru>
+  +stressapptest-1.0.2.ebuild:
+  version bump
+
+*stressapptest-1.0.2 ( 14 Mar 2010 )
 
   20 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
   +stressapptest-1.0.0.ebuild, +metadata.xml:
   initial commit for testing
+
+*stressapptest-1.0.0 ( 20 Oct 2009 )
 
